--- a/limpa/templates/limpa/home.html
+++ b/limpa/templates/limpa/home.html
@@ -12,7 +12,7 @@
               href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🧼</text></svg>">
             <script src="https://unpkg.com/htmx.org@2.0.4"></script>
         </head>
-        <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
+        <body>
             <div class="container">
                 <header>
                     <a href="/" class="logo">🧼 Limpa</a>
@@ -48,6 +48,11 @@
                     {% endfor %}
                 </div>
             </div>
+            <script>
+            document.body.addEventListener('htmx:configRequest', (event) => {
+                event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+            });
+            </script>
         </body>
     </html>
 
